--- a/exam-project/src/app/views/create-offer/create-offer.component.html
+++ b/exam-project/src/app/views/create-offer/create-offer.component.html
@@ -4,12 +4,12 @@
     <div class="header-background">
         <span>New Offer</span>
     </div>
-    <form #form="ngForm" (ngSubmit)="createOffer(form)">
+    <form #form="ngForm" class="form" (ngSubmit)="createOffer(form)">
 
 
         <div class="offer-details">
             <label for="names">Names: <span class="red">*</span></label>
-            <input type="text" #names="ngModel" required ngModel name="names" id="names">
+            <input type="text" class="input" #names="ngModel" required ngModel name="names" id="names">
 
             <ng-container *ngIf="names.touched">
                 <p class="error" *ngIf="names.errors?.['required'] ">
@@ -20,8 +20,8 @@
         </div>
         <div class="offer-details">
             <label for="email">Email: <span class="red">*</span></label>
-            <textarea type="text" name="email" [appValidators]="['bg', 'com']" required ngModel #inputEmail="ngModel"
-                id="email" rows="1"></textarea>
+            <textarea type="text" class="input" name="email" [appValidators]="['bg', 'com']" required ngModel
+                #inputEmail="ngModel" id="email" rows="1"></textarea>
 
             <ng-container *ngIf="inputEmail.touched">
                 <p class="errorRequired" *ngIf="inputEmail.errors?.['required'] ">
@@ -36,7 +36,7 @@
 
         <div class="offer-details">
             <label for="hand">Hand: <span class="red">*</span></label>
-            <select id="hand" #hand="ngModel" required ngModel name="hand">
+            <select id="hand" class="input" #hand="ngModel" required ngModel name="hand">
                 <option value="right">Right</option>
                 <option value="left">Left</option>
                 <option value="both">Both</option>
@@ -49,7 +49,7 @@
 
         <div class="offer-details">
             <label for="weight">Weight: <span class="red">*</span></label>
-            <select id="weight" #weight="ngModel" required ngModel name="weight">
+            <select id="weight" class="input" #weight="ngModel" required ngModel name="weight">
                 <option value="60kg">Bellow 60 kilograms</option>
                 <option value="70kg">Bellow 70 kilograms</option>
                 <option value="80kg">Bellow 80 kilograms</option>
@@ -66,8 +66,8 @@
 
         <div class="offer-details">
             <label for="place">Place <span class="red">*</span></label>
-            <textarea type="text" name="place" #place="ngModel" required ngModel id="place" rows="1"
-                class="height"></textarea>
+            <textarea type="text" class="input" name="place" #place="ngModel" required ngModel id="place"
+                rows="1"></textarea>
             <p class="error">
                 The field with your place is required.
             </p>
@@ -76,8 +76,8 @@
 
         <div class="offer-details">
             <label for="bet">Bet price in USD: <span class="red">*</span></label>
-            <textarea type="number" name="bet" id="bet" required ngModel #bet="ngModel" rows="1"
-                class="height"></textarea>
+            <textarea type="number" class="input" name="bet" id="bet" required ngModel #bet="ngModel"
+                rows="1"></textarea>
             <p class="error">
                 The field with your bet is required.
             </p>
