--- a/exam-project/src/app/views/create-offer/create-offer.component.css
+++ b/exam-project/src/app/views/create-offer/create-offer.component.css
@@ -43,7 +43,7 @@
 }
 
 .input {
-    width: 70%;
+    width: 458px;
     border-radius: 0.3em;
     padding: 0.35em;
 
@@ -53,6 +53,14 @@ button {
     font-size: 20px;
     margin-left: 1rem;
     padding: 20px;
+    width: 458px;
+    color: white;
+    background-color: #32d6c8;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: #102f2c;
 }
 
 .new-theme-buttons {
