--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -21,7 +21,7 @@
 </ng-container>
 
 <ng-container *ngIf="editable">
-    <div class="container">
+    <div class="container2">
         <div class="profile"><img src="./profile.png" alt="default user">
             <h3>Offer Info:</h3>
             <div class="flex">
