--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -54,11 +54,11 @@
                 <form action="">
                     <div class="flex">
                         <p>Name: </p>
-                        <input type="text" name="name" id="name" value="{{catalog.name}}">
+                        <input type="text" name="name" id="name" value="{{catalog.make}}">
                     </div>
                     <div class="flex">
                         <p>Email: </p>
-                        <input type="email" name="email" id="email" value="{{catalog.email}}">
+                        <input type="email" name="email" id="email" value="{{catalog.model}}">
                     </div>
                     <div class="flex">
                         <p>Phone: </p>
@@ -66,7 +66,7 @@
                             <select name="select-tel" id="select-tel" class="tel">
                                 <option value="00359">+359</option>
                             </select>
-                            <input type="text" name="tel" id="tel" value="{{catalog.tel}}">
+                            <input type="text" name="tel" id="tel" value="{{catalog.year}}">
                         </div>
                     </div>
                     <button class="red-button">Cancel</button>
