--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -64,9 +64,9 @@
                         <p>Phone: </p>
                         <div>
                             <select name="select-tel" id="select-tel" class="tel">
-                                <option value="00359">+359</option>
+
                             </select>
-                            <input type="text" name="tel" id="tel" value="{{catalog.year}}">
+                            <input type="text" name="number" id="tel" value="{{catalog.year}}">
                         </div>
                     </div>
                     <button class="red-button" (click)="cancel($event)">Cancel</button>
