--- a/exam-project/src/app/views/offers/offers.component.css
+++ b/exam-project/src/app/views/offers/offers.component.css
@@ -3,7 +3,7 @@
     max-width: 500px;
     margin: 2em auto 1rem;
     padding: .5em;
-    border: .3em solid rgb(0, 212, 255);
+    border: 1em solid #32d6c8;
     border-radius: .5rem;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #444;
@@ -46,6 +46,7 @@
     border-radius: 0.3em;
     padding: 0.6em 1.2em;
     outline: none;
+    background-color: #32d6c8;
 }
 
 .flex>input,
@@ -74,4 +75,9 @@
 .container2 {
     padding-top: 200px;
     padding-bottom: 400px;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: #102f2c;
 }
