--- a/exam-project/src/app/views/offers copy/offers.component.html
+++ b/exam-project/src/app/views/offers copy/offers.component.html
@@ -1,5 +1,5 @@
 <!-- homepage -->
-<ng-container *ngIf="catalog.length > 1">
+<ng-container >
     <div *ngFor="let offer of catalog" class="container">
         <div class="profile"><img src="./profile.png" alt="default user">
             <h3>Offer Info:</h3>
@@ -20,8 +20,8 @@
     </div>
 </ng-container>
 
-<ng-container *ngIf="catalog.length == 1">
-    <div class="container">
+<!-- <ng-container *ngIf="catalog.length == 1">
+    <div  class="container">
         <div class="profile"><img src="./profile.png" alt="default user">
             <h3>Offer Info:</h3>
             <div class="flex">
@@ -36,7 +36,7 @@
                 <p>Phone: </p>
                 <p>{{catalog.year}}</p>
             </div>
-            <!-- // <button (click)="edit(offer._id)" class="edit-button">Edit</button> -->
+            <button (click)="edit(catalog._id)" class="edit-button">Edit</button>
         </div>
     </div>
-</ng-container>
+</ng-container> -->
