--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -58,11 +58,11 @@
 
                 <div class="flex">
                     <p>Name: </p>
-                    <input type="text" formControlName="name" name="name" id="name" [value]="furnitureDetails.make">
+                    <input type="text" formControlName="name" name="name" id="name" [value]="">
                 </div>
                 <div class="flex">
                     <p>Email: </p>
-                    <input type="text" formControlName="email" name="email" id="email" [value]="furnitureDetails.model">
+                    <input type="text" formControlName="email" name="email" id="email" [value]="">
                 </div>
                 <div class="flex">
                     <p>Year: </p>
@@ -70,7 +70,7 @@
 
 
 
-                        <input type="text" formControlName="year" name="year" id="year" [value]="furnitureDetails.year">
+                        <input type="text" formControlName="year" name="year" id="year" [value]="">
                     </div>
                 </div>
                 <button class="red-button" (click)="cancel($event)">Cancel</button>
