--- a/exam-project/src/app/views/register/register.component.html
+++ b/exam-project/src/app/views/register/register.component.html
@@ -32,42 +32,51 @@
             </ng-container>
 
 
-            <!-- password -->
+            <!-- telephone -->
             <p class="field field-icon">
-                <label for="password"><span><i class="fas fa-lock"></i></span></label>
-                <input type="password" name="password" id="password" placeholder="******" formControlName="password" />
+                <label for="tel"><span><i class="fas fa-phone"></i></span></label>
+                <select name="select-tel" id="select-tel" class="tel">
+                    <option value="00359">+359</option>
+                </select>
+                <input type="text" name="tel" id="tel" placeholder="885 888 888" formControlName="tel" />
             </p>
-            <ng-container *ngIf="form.get('password')?.touched">
-                <p class="error" *ngIf="form.get('password')?.errors?.['required']">
-                    Password is required!
-                </p>
-                <p class="error" *ngIf="form.get('password')?.errors?.['minlength']">
-                    Password must be at least 4 characters!
-                </p>
-            </ng-container>
-            <!-- rePassword -->
-            <p class="field field-icon">
-                <label for="rePassword"><span><i class="fas fa-lock"></i></span></label>
-                <input type="password" name="rePassword" formControlName="rePassword" id="rePassword"
-                    placeholder="******">
-            </p>
-            <ng-container *ngIf="form.get('rePassword')?.touched">
-                <p class="error" *ngIf="form.get('rePassword')?.errors?.['required']">
-                    Email is required!
-                </p>
-                <p *ngIf="form.get('rePassword')?.errors?.['minlength']" class="error">
-                    Email is not valid!
-                </p>
-            </ng-container>
-            <!-- <p class="error">Repeat Password does not match password!</p> -->
 
-            <button class="button">Create Account</button>
+            <ng-container formGroupName="passGroup">
+                <!-- password -->
+                <p class="field field-icon">
+                    <label for="password"><span><i class="fas fa-lock"></i></span></label>
+                    <input type="password" name="password" id="password" placeholder="******"
+                        formControlName="password" />
+                </p>
+                <!-- <p class="error">
+                Password is required!
+            </p>
+            <p class="error">
+                Password must be at least 5 characters!
+            </p> -->
+
+                <!-- rePassword -->
+                <p class="field field-icon">
+                    <label for="rePassword"><span><i class="fas fa-lock"></i></span></label>
+                    <input type="password" name="rePassword" id="rePassword" placeholder="******"
+                        formControlName="rePassword" />
+                </p>
+                <ng-container *ngIf="passGroup?.get('rePassword')?.touched">
+                    <p class="error" *ngIf="passGroup?.errors?.['matchPasswordsValidator'] || 
+            passGroup?.get('rePassword')?.errors?.['required']">
+                        Repeat Password does not match password!
+                    </p>
+                </ng-container>
+            </ng-container>
+
+            <button [disabled]="form.invalid" [style]="{ backgroundColor: form.invalid ? 'grey' : 'blue' }">
+                Create Account
+            </button>
 
             <p class="text-center">
                 Have an account?
-                <a href="/login">Log In</a>
+                <a routerLink="/login">Log In</a>
             </p>
-
         </fieldset>
     </form>
 </div>
