--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -58,7 +58,7 @@
 
                 <div class="flex">
                     <p>Name: </p>
-                    <input type="text" formControlName="name" name="name" id="name" [value]="">
+                    <input type="text" formControlName="name" name="name" id="name" [value]="catalog">
                 </div>
                 <div class="flex">
                     <p>Email: </p>
