--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -31,11 +31,11 @@
             <h3>Offer Info:</h3>
             <div class="flex">
                 <p>Names: </p>
-                <p>{{furnitureDetails.make}}</p>
+                <p>{{}}</p>
             </div>
             <div class="flex">
                 <p>Email: </p>
-                <p>{{offer.make}}</p>
+                <p>{{offer.}}</p>
             </div>
             <div class="flex">
                 <p>Year: </p>
