--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -27,11 +27,11 @@
 
 <ng-container *ngIf="editable">
     <div *ngFor="let offer of catalog" class="container">
-        <!-- <div class="profile"><img src="./profile.png" alt="default user">
+        <div class="profile"><img src="./profile.png" alt="default user">
             <h3>Offer Info:</h3>
             <div class="flex">
-                <p>Names: </p> -->
-        <!-- <p>{{}}</p>
+                <p>Names: </p>
+                <p>{{}}</p>
             </div>
             <div class="flex">
                 <p>Email: </p>
@@ -74,9 +74,9 @@
                     </div>
                 </div>
                 <button class="red-button" (click)="cancel($event)">Cancel</button>
-                <button class="green-button" (click)="save()">Save</button> -->
+                <button class="green-button" (click)="save()">Save</button>
 
-        <!-- </div>
-        </form> -->
+            </div>
+        </form>
     </div>
 </ng-container>
