--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -31,11 +31,11 @@
             <h3>Offer Info:</h3>
             <div class="flex">
                 <p>Names: </p>
-                <p>{{}}</p>
+                <p></p>
             </div>
             <div class="flex">
                 <p>Email: </p>
-                <p>{{offer.}}</p>
+                <p></p>
             </div>
             <div class="flex">
                 <p>Year: </p>
@@ -48,7 +48,7 @@
 
 
 
-<ng-container *ngIf="editable">
+<!-- <ng-container *ngIf="editable">
 
     <div class="container">
         <form [formGroup]="form" (ngSubmit)="save()">
@@ -74,9 +74,9 @@
                     </div>
                 </div>
                 <button class="red-button" (click)="cancel($event)">Cancel</button>
-                <button class="green-button" (click)="save()">Save</button>
+                <button class="green-button" (click)="save()">Save</button> 
 
             </div>
         </form>
     </div>
-</ng-container>
+</ng-container> -->
