--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -9,13 +9,13 @@
             </div>
             <div class="flex">
                 <p>Email: </p>
-                <p>{{offer.make}}</p>
+                <p>{{catalog}}</p>
             </div>
             <div class="flex">
                 <p>Year: </p>
-                <p>{{offer.year}}</p>
+                <p>{{catalog}}</p>
             </div>
-            <button (click)="edit(offer._id)" class="edit-button">Edit</button>
+            <button (click)="edit(catalog._id)" class="edit-button">Edit</button>
         </div>
     </div>
 </ng-container>
@@ -39,7 +39,7 @@
             </div>
             <div class="flex">
                 <p>Year: </p>
-                <p>{{offer.year}}</p>
+                <p>{{catalog}}</p>
             </div>
             <button (click)="edit(offer._id)" class="edit-button">Edit</button>
         </div>
