--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -48,7 +48,7 @@
 
 
 
-<!-- <ng-container *ngIf="editable">
+<ng-container *ngIf="editable">
 
     <div class="container">
         <form [formGroup]="form" (ngSubmit)="save()">
@@ -74,9 +74,9 @@
                     </div>
                 </div>
                 <button class="red-button" (click)="cancel($event)">Cancel</button>
-                <button class="green-button" (click)="save()">Save</button> 
+                <button class="green-button" (click)="save()">Save</button>
 
             </div>
         </form>
     </div>
-</ng-container> -->
+</ng-container>
