--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -8,12 +8,12 @@
                 <p>{{one.themeName}}</p>
             </div>
             <div class="flex">
-                <p>Email: </p>
-                <p>{{one._id}}</p>
+                <p>Posts: </p>
+                <p>{{one.posts}}</p>
             </div>
             <div class="flex">
                 <p>Year: </p>
-                <p>{{catalog}}</p>
+                <p>{{one}}</p>
             </div>
             <button (click)="edit(catalog._id)" class="edit-button">Edit</button>
         </div>
