--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -5,7 +5,7 @@
             <h3>Offer Info:</h3>
             <div class="flex">
                 <p>Names: </p>
-                <p>{{one.themeName}}</p>
+                <p>{{one.userId.name}}</p>
             </div>
             <div class="flex">
                 <p>Posts: </p>
