--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -5,7 +5,15 @@
             <h3>Offer Info:</h3>
             <div class="flex">
                 <p>Names: </p>
-                <p>{{one.userId.name}}</p>
+                <p>{{one.userId.username}}</p>
+            </div>
+            <div class="flex">
+                <p>Email: </p>
+                <p>{{one}}</p>
+            </div>
+            <div class="flex">
+                <p>Tel: </p>
+                <p>{{one.userId.tel}}</p>
             </div>
             <div class="flex">
                 <p>Posts: </p>
