--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -20,7 +20,7 @@
                 <p>Year: </p>
                 <p>{{one.created_at }}</p>
             </div>
-            <button (click)="edit(catalog._id)" class="edit-button">Edit</button>
+            <button (click)="edit(one._id)" class="edit-button">Edit</button>
         </div>
     </div>
 </ng-container>
@@ -31,22 +31,22 @@
 
 
 <ng-container *ngIf="editable">
-    <div *ngFor="let offer of catalog" class="container">
+    <div *ngFor="let one of catalog" class="container">
         <div class="profile"><img src="./profile.png" alt="default user">
             <h3>Offer Info:</h3>
             <div class="flex">
-                <p>Names: </p>
+                <p>Names: {{one.userId.username}}</p>
                 <p></p>
             </div>
             <div class="flex">
-                <p>Email: </p>
+                <p>Email: {{one.userId.email}}</p>
                 <p></p>
             </div>
             <div class="flex">
-                <p>Year: </p>
-                <p>{{catalog}}</p>
+                <p>Tel: </p>
+                <p>{{one.userId.username}}</p>
             </div>
-            <button (click)="edit(offer._id)" class="edit-button">Edit</button>
+            <button (click)="edit(one._id)" class="edit-button">Edit</button>
         </div>
     </div>
 </ng-container>
